Initialize the refactoring

--- a/binaries/binaries/binaries.csproj
+++ b/binaries/binaries/binaries.csproj
@@ -46,16 +46,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BinaryCal.cs" />
+    <Compile Include="BinaryToIntCal.cs" />
     <Compile Include="CalculatorMain.cs" />
+    <Compile Include="CalculatorProcessor.cs" />
+    <Compile Include="CalHistory.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="IBinaryExtend.cs" />
     <Compile Include="ICal.cs" />
-    <Compile Include="IntCal.cs" />
+    <Compile Include="IntToBinaryCal.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
