--- a/binaries/binaries/binaries.csproj
+++ b/binaries/binaries/binaries.csproj
@@ -49,7 +49,8 @@
     <Compile Include="BinaryToIntCal.cs" />
     <Compile Include="CalculatorMain.cs" />
     <Compile Include="CalculatorProcessor.cs" />
-    <Compile Include="CalHistory.cs" />
+    <Compile Include="CCList.cs" />
+    <Compile Include="CIListStraight.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -58,6 +59,8 @@
     </Compile>
     <Compile Include="IBinaryExtend.cs" />
     <Compile Include="ICal.cs" />
+    <Compile Include="ICalCollection.cs" />
+    <Compile Include="ICalIterator.cs" />
     <Compile Include="IntToBinaryCal.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
