Added Hex to Decimal convertion to main program (HexToIntCal.cs)

--- a/binaries/binaries/binaries.csproj
+++ b/binaries/binaries/binaries.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="HexToIntCal.cs" />
     <Compile Include="IBinaryExtend.cs" />
     <Compile Include="ICal.cs" />
     <Compile Include="ICalCollection.cs" />
