--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ binaries/discord_bot_api/bin/
 binaries/discord_bot_api/obj/
 binaries/dotnet_core_version/bin/
 binaries/dotnet_core_version/obj/
+binaries/ConsoleApp1/bin/
+binaries/ConsoleApp1/obj/
