--- a/binaries/discord_bot_api_dotnet/discord_bot_api_dotnet.csproj
+++ b/binaries/discord_bot_api_dotnet/discord_bot_api_dotnet.csproj
@@ -24,4 +24,8 @@
     <PackageReference Include="System.Collections.Immutable" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\binaries_cal\binaries_cal.csproj" />
+  </ItemGroup>
+
 </Project>
