--- a/binaries/binaries_wpf_dotnet/binaries_wpf_dotnet.csproj
+++ b/binaries/binaries_wpf_dotnet/binaries_wpf_dotnet.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\binaries_cal\binaries_cal.csproj" />
+  </ItemGroup>
+
 </Project>
