--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ binaries/discord_bot_api_dotnet/bin/
 binaries/discord_bot_api_dotnet/obj/
 binaries/binaries_cal/bin/
 binaries/binaries_cal/obj/
+binaries/wallet_and_loans/bin/
+binaries/wallet_and_loans/obj/
