--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ binaries/wallet_and_loans/bin/
 binaries/wallet_and_loans/obj/
 binaries/wallet_and_loans_test/bin/
 binaries/wallet_and_loans_test/obj/
+binaries/discord_main_api_gate/bin/
+binaries/discord_main_api_gate/obj/
